tests/format/junctions/invalid/junction-dep.bst
kind: stack
depends:
- base.bst
